# brainfuck

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE.txt  README.md
examples/: benchmark.bf  factorial.bf  hello-world.bf  life.bf  tic-tac-toe.bf
include/: compiler.h  interpreter.h  opcodes.h  parser.h  statement.h  utils.h
src/: compiler.cpp  interpreter.cpp  main.cpp  parser.cpp
